new post: fmt vim like go fmt; updated js: smooth scrollToTop

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <footer>
   <span id="footer-title" href="/?p=cv"></span>
   <span id="last-modified"></span>
-  <a href="#">Top</a>
+  <a id="scroll-to-top" href="#">Top</a>
 </footer>
 <script src="dist/bundle.js"></script>
 </body>
