added Fetching spinner

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
   <a href="/?p=cv">CV(1)</a>
 </header>
 
-<main></main>
+<main>
+  <p id="loader">
+    <span id="spinner"></span>
+    Fetching...
+  </p>
+</main>
 
 <footer>
   <span id="footer-title" href="/?p=cv"></span>
