added mathjax; new post: pl-1

--- a/index.html
+++ b/index.html
@@ -26,5 +26,18 @@
   <a id="scroll-to-top" href="#">Top</a>
 </footer>
 <script src="dist/bundle.js"></script>
+<script
+  type="text/javascript"
+  async
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS_HTML">
+</script>
+<script>
+window.MathJax = {
+  tex2jax: {
+    inlineMath: [['$', '$'], ['\\(', '\\)']],
+    processEscapes: true
+  }
+}
+</script>
 </body>
 </html>
