--- a/index.html
+++ b/index.html
@@ -1,43 +1,55 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="initial-scale=1">
   <title>Horrible RAM</title>
-  <link rel="stylesheet" href="dist/style.css">
 </head>
+
 <body>
-<header>
-  <a href="https://github.com/anqurvanillapy">Code(1)</a>
-  <a href="/">Horrible RAM</a>
-  <a href="/?p=cv">CV(1)</a>
-</header>
+  <header>
+    <a href="/">Horrible RAM</a> It's a header, everyone!
+  </header>
 
-<main>
-  <p id="loader">
-    <span id="spinner"></span>
-  </p>
-</main>
+  <main>
+  <p><a href="https://github.com/anqurvanillapy">AnqurVanillapy</a> 的博客.</p>
+<pre><code> _   _                 _ _     _      ____      _    __  __
+| | | | ___  _ __ _ __(_) |__ | | ___|  _ \    / \  |  \/  |
+| |_| |/ _ \| &#39;__| &#39;__| | &#39;_ \| |/ _ \ |_) |  / _ \ | |\/| |
+|  _  | (_) | |  | |  | | |_) | |  __/  _ &lt;  / ___ \| |  | |
+|_| |_|\___/|_|  |_|  |_|_.__/|_|\___|_| \_\/_/   \_\_|  |_|</code></pre>
+<h2 id="contents">Contents</h2>
+<ol type="1">
+<li><a href="post/cpp11-task-queue">C++11 风格的迷你任务队列</a></li>
+<li><a href="post/c-infinite-loop">C 中的无限循环</a></li>
+<li><a href="post/initialization-outta-main">初探进程的动态初始化</a></li>
+<li><a href="post/fmt-vim-like-go-fmt">Vim 中的制表符缩进与空格对齐</a></li>
+<li><a href="post/tagged-pointer">标记指针</a></li>
+<li><a href="post/chan-chan">Chan Chan</a></li>
+<li><a href="post/maybe-and-calling-conventions"><code>maybe&lt;T&gt;</code> 与调用规范</a></li>
+<li><a href="post/cpp-than-java-and-future">C++ vs Java?</a></li>
+<li><a href="post/js-task-and-microtask">初探 JavaScript 中的 task 和 microtask</a></li>
+<li><a href="post/likely-and-unlikely-trick">likely 和 unlikely 技巧</a></li>
+<li><a href="post/monash">Monash: 以 monadic 的姿势写 Shell</a></li>
+<li><a href="post/purity-in-cpp17">在 C++17 中为用户函数提供 purity 检测</a></li>
+<li><a href="post/lies-about-programming-languages-in-mathematical-notations-1">数学符号下的编程谎言 (1) 数据编码</a></li>
+<li><a href="post/how-to-make-russell-paradox">如何创造罗素悖论</a></li>
+</ol>
+<h2 id="notes">Notes</h2>
+<p>我的 <a href="post/cv">CV</a>.</p>
+<p>各种讨论和 bugs 可以创建相应 <a href="https://github.com/anqurvanillapy/anqurvanillapy.github.io/issues">Issues</a>. 文章遵守 <code>cc-by-4.0</code> 协议.</p>
+<p><em>Horrible RAM</em> 是 <em>oroblram</em> 的谐音, 反过来即是 <em>Marlboro</em>, 是对 2011 年电影 The Girl with the Dragon Tattoo 中男主角在遭遇失败后购买的红万香烟的致敬.</p>
 
-<footer>
-  <span id="footer-title" href="/?p=cv"></span>
-  <span id="last-modified"></span>
-  <a id="scroll-to-top" href="#">Top</a>
-</footer>
-<script src="dist/bundle.js"></script>
-<script
-  type="text/javascript"
-  async
-  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-AMS_HTML">
-</script>
-<script>
-window.MathJax = {
-  tex2jax: {
-    inlineMath: [['$', '$'], ['\\(', '\\)']],
-    processEscapes: true
-  }
-}
-</script>
+  </main>
+
+  <footer>
+    It's footer, everyone!
+  </footer>
+
+  <script type="text/javascript" async src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+  </script>
 </body>
+
 </html>
