--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="initial-scale=1">
+
   <title>Horrible RAM</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
@@ -21,7 +23,7 @@
 |  _  | (_) | |  | |  | | |_) | |  __/  _ &lt;  / ___ \| |  | |
 |_| |_|\___/|_|  |_|  |_|_.__/|_|\___|_| \_\/_/   \_\_|  |_|</code></pre>
 <h2 id="contents">Contents</h2>
-<ol type="1">
+<ul>
 <li><a href="post/cpp11-task-queue">C++11 风格的迷你任务队列</a></li>
 <li><a href="post/c-infinite-loop">C 中的无限循环</a></li>
 <li><a href="post/initialization-outta-main">初探进程的动态初始化</a></li>
@@ -36,7 +38,7 @@
 <li><a href="post/purity-in-cpp17">在 C++17 中为用户函数提供 purity 检测</a></li>
 <li><a href="post/lies-about-programming-languages-in-mathematical-notations-1">数学符号下的编程谎言 (1) 数据编码</a></li>
 <li><a href="post/how-to-make-russell-paradox">如何创造罗素悖论</a></li>
-</ol>
+</ul>
 <h2 id="notes">Notes</h2>
 <p>我的 <a href="post/cv">CV</a>.</p>
 <p>各种讨论和 bugs 可以创建相应 <a href="https://github.com/anqurvanillapy/anqurvanillapy.github.io/issues">Issues</a>. 文章遵守 <code>cc-by-4.0</code> 协议.</p>
@@ -48,7 +50,10 @@
     END
   </footer>
 
-  <script type="text/javascript" async src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+  <script
+    type="text/javascript"
+    async
+    src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
   </script>
 </body>
 
