--- a/scripts/template.html
+++ b/scripts/template.html
@@ -5,7 +5,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="initial-scale=1">
+
   <title>Horrible RAM</title>
+  <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
@@ -21,7 +23,10 @@
     END
   </footer>
 
-  <script type="text/javascript" async src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+  <script
+    type="text/javascript"
+    async
+    src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
   </script>
 </body>
 
