[ template ] Wrap body in a article tag

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </header>
 
   <main>
-  <p><a href="https://github.com/anqurvanillapy">AnqurVanillapy</a> 的博客.</p>
+    <article><p><a href="https://github.com/anqurvanillapy">AnqurVanillapy</a> 的博客.</p>
 <pre><code> _   _                 _ _     _      ____      _    __  __
 | | | | ___  _ __ _ __(_) |__ | | ___|  _ \    / \  |  \/  |
 | |_| |/ _ \| &#39;__| &#39;__| | &#39;_ \| |/ _ \ |_) |  / _ \ | |\/| |
@@ -43,7 +43,7 @@
 <p>我的 <a href="post/cv">CV</a>.</p>
 <p>各种讨论和 bugs 可以创建相应 <a href="https://github.com/anqurvanillapy/anqurvanillapy.github.io/issues">Issues</a>. 文章遵守 <code>cc-by-4.0</code> 协议.</p>
 <p><em>Horrible RAM</em> 是 <em>oroblram</em> 的谐音, 反过来即是 <em>Marlboro</em>, 是对 2011 年电影 The Girl with the Dragon Tattoo 中男主角在遭遇失败后购买的红万香烟的致敬.</p>
-
+</article>
   </main>
 
   <footer>
