[ style ] Finished style rework

--- a/scripts/template.html
+++ b/scripts/template.html
@@ -6,13 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="initial-scale=1">
 
-  <title>Horrible RAM</title>
-  <link rel="stylesheet" href="/style.css">
+  <title>tl;dw | Anqur</title>
+  <link rel="stylesheet" href="/scripts/style.css">
+  <link rel="stylesheet" href="/scripts/highlight.css">
 </head>
 
 <body>
   <header>
-    <a href="/">Horrible RAM</a>
+    <h1><a href="/">tl;dw</a></h1>
   </header>
 
   <main>
@@ -20,7 +21,7 @@
   </main>
 
   <footer>
-    END
+    Too long, didn't write.
   </footer>
 
   <script
