--- a/index.html
+++ b/index.html
@@ -6,22 +6,18 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="initial-scale=1">
 
-  <title>Horrible RAM</title>
-  <link rel="stylesheet" href="/style.css">
+  <title>tl;dw | Anqur</title>
+  <link rel="stylesheet" href="/scripts/style.css">
+  <link rel="stylesheet" href="/scripts/highlight.css">
 </head>
 
 <body>
   <header>
-    <a href="/">Horrible RAM</a>
+    <h1><a href="/">tl;dw</a></h1>
   </header>
 
   <main>
-    <article><p><a href="https://github.com/anqurvanillapy">AnqurVanillapy</a> 的博客.</p>
-<pre><code> _   _                 _ _     _      ____      _    __  __
-| | | | ___  _ __ _ __(_) |__ | | ___|  _ \    / \  |  \/  |
-| |_| |/ _ \| &#39;__| &#39;__| | &#39;_ \| |/ _ \ |_) |  / _ \ | |\/| |
-|  _  | (_) | |  | |  | | |_) | |  __/  _ &lt;  / ___ \| |  | |
-|_| |_|\___/|_|  |_|  |_|_.__/|_|\___|_| \_\/_/   \_\_|  |_|</code></pre>
+    <article><p><a href="//github.com/anqurvanillapy">Anqur</a> 的博客.</p>
 <h2 id="contents">Contents</h2>
 <ul>
 <li><a href="post/cpp11-task-queue">C++11 风格的迷你任务队列</a></li>
@@ -42,12 +38,11 @@
 <h2 id="notes">Notes</h2>
 <p>我的 <a href="post/cv">CV</a>.</p>
 <p>各种讨论和 bugs 可以创建相应 <a href="https://github.com/anqurvanillapy/anqurvanillapy.github.io/issues">Issues</a>. 文章遵守 <code>cc-by-4.0</code> 协议.</p>
-<p><em>Horrible RAM</em> 是 <em>oroblram</em> 的谐音, 反过来即是 <em>Marlboro</em>, 是对 2011 年电影 The Girl with the Dragon Tattoo 中男主角在遭遇失败后购买的红万香烟的致敬.</p>
 </article>
   </main>
 
   <footer>
-    END
+    Too long, didn't write.
   </footer>
 
   <script
