[ post ] New post; all posts moved to legacy

--- a/index.html
+++ b/index.html
@@ -17,27 +17,34 @@
   </header>
 
   <main>
-    <article><p><a href="//github.com/anqurvanillapy">Anqur</a> 的博客.</p>
+    <article><p>Blog of <a href="//github.com/anqurvanillapy">Anqur</a>.</p>
 <h2 id="contents">Contents</h2>
+<ol start="0" type="1">
+<li><a href="post/20200703-oktt-notes">Notes about Notes: OKTT</a></li>
+</ol>
+<details>
+<p><summary>Legacy Posts</summary></p>
 <ul>
-<li><a href="post/cpp11-task-queue">C++11 风格的迷你任务队列</a></li>
-<li><a href="post/c-infinite-loop">C 中的无限循环</a></li>
-<li><a href="post/initialization-outta-main">初探进程的动态初始化</a></li>
-<li><a href="post/fmt-vim-like-go-fmt">Vim 中的制表符缩进与空格对齐</a></li>
-<li><a href="post/tagged-pointer">标记指针</a></li>
-<li><a href="post/chan-chan">Chan Chan</a></li>
-<li><a href="post/maybe-and-calling-conventions"><code>maybe&lt;T&gt;</code> 与调用规范</a></li>
-<li><a href="post/cpp-than-java-and-future">C++ vs Java?</a></li>
-<li><a href="post/js-task-and-microtask">初探 JavaScript 中的 task 和 microtask</a></li>
-<li><a href="post/likely-and-unlikely-trick">likely 和 unlikely 技巧</a></li>
-<li><a href="post/monash">Monash: 以 monadic 的姿势写 Shell</a></li>
-<li><a href="post/purity-in-cpp17">在 C++17 中为用户函数提供 purity 检测</a></li>
-<li><a href="post/lies-about-programming-languages-in-mathematical-notations-1">数学符号下的编程谎言 (1) 数据编码</a></li>
-<li><a href="post/how-to-make-russell-paradox">如何创造罗素悖论</a></li>
+<li><a href="post/legacy/cpp11-task-queue">C++11 风格的迷你任务队列</a></li>
+<li><a href="post/legacy/c-infinite-loop">C 中的无限循环</a></li>
+<li><a href="post/legacy/initialization-outta-main">初探进程的动态初始化</a></li>
+<li><a href="post/legacy/fmt-vim-like-go-fmt">Vim 中的制表符缩进与空格对齐</a></li>
+<li><a href="post/legacy/tagged-pointer">标记指针</a></li>
+<li><a href="post/legacy/chan-chan">Chan Chan</a></li>
+<li><a href="post/legacy/maybe-and-calling-conventions"><code>maybe&lt;T&gt;</code> 与调用规范</a></li>
+<li><a href="post/legacy/cpp-than-java-and-future">C++ vs Java?</a></li>
+<li><a href="post/legacy/js-task-and-microtask">初探 JavaScript 中的 task 和 microtask</a></li>
+<li><a href="post/legacy/likely-and-unlikely-trick">likely 和 unlikely 技巧</a></li>
+<li><a href="post/legacy/monash">Monash: 以 monadic 的姿势写 Shell</a></li>
+<li><a href="post/legacy/purity-in-cpp17">在 C++17 中为用户函数提供 purity 检测</a></li>
+<li><a href="post/legacy/lies-about-programming-languages-in-mathematical-notations-1">数学符号下的编程谎言 (1) 数据编码</a></li>
+<li><a href="post/legacy/how-to-make-russell-paradox">如何创造罗素悖论</a></li>
 </ul>
+</details>
 <h2 id="notes">Notes</h2>
-<p>我的 <a href="post/cv">CV</a>.</p>
-<p>各种讨论和 bugs 可以创建相应 <a href="https://github.com/anqurvanillapy/anqurvanillapy.github.io/issues">Issues</a>. 文章遵守 <code>cc-by-4.0</code> 协议.</p>
+<p>My <a href="post/cv">CV</a>.</p>
+<p>Report bugs, or you have better ideas: <a href="https://github.com/anqurvanillapy/anqurvanillapy.github.io/issues">Issues</a>.</p>
+<p>All posts follow the <code>cc-by-4.0</code> license.</p>
 </article>
   </main>
 
