Updated answers of exercises

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <article><p>Blog of <a href="//github.com/anqurvanillapy">Anqur</a>.</p>
 <h2 id="contents">Contents</h2>
 <ol start="0" type="1">
-<li><a href="post/20200703-oktt-notes">Notes about Notes: OKTT</a></li>
+<li><a href="post/20200703-oktt-notes">Notes about Notes: OKTT</a> (WIP)</li>
 </ol>
 <details>
 <p><summary>Legacy Posts</summary></p>
