Init oo-cat-transcript; Update build script

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
   <main>
     <article><p>Blog of <a href="//github.com/anqurvanillapy">Anqur</a>.</p>
 <h2 id="contents">Contents</h2>
-<ol start="0" type="1">
+<ol type="1">
 <li><a href="post/20200703-oktt-notes">Notes about Notes: OKTT</a> (WIP)</li>
+<li><a href="post/20200804-oo-cat-transcript">Transcript: ∞-Category Theory for Undergraduates</a> (WIP)</li>
 </ol>
 <details>
 <p><summary>Legacy Posts</summary></p>
