CV generation script

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="initial-scale=1">
 
   <title>tl;dw | Anqur</title>
-  <link rel="stylesheet" href="/scripts/style.css">
+  <link rel="stylesheet" href="/style/post.css">
   <link rel="stylesheet" href="/scripts/highlight.css">
 </head>
 
@@ -17,7 +17,8 @@
   </header>
 
   <main>
-    <article><p>Blog of <a href="//github.com/anqurvanillapy">Anqur</a>.</p>
+    <article>
+      <p>Blog of <a href="//github.com/anqurvanillapy">Anqur</a>.</p>
 <h2 id="contents">Contents</h2>
 <ol type="1">
 <li><a href="post/20200703-oktt-notes">Notes about Notes: OKTT</a> (WIP)</li>
@@ -46,7 +47,8 @@
 <p>My <a href="post/cv">CV</a>.</p>
 <p>Report bugs, or you have better ideas: <a href="https://github.com/anqurvanillapy/anqurvanillapy.github.io/issues">Issues</a>.</p>
 <p>All posts follow the <code>cc-by-4.0</code> license.</p>
-</article>
+
+    </article>
   </main>
 
   <footer>
