--- a/index.html
+++ b/index.html
@@ -6,60 +6,52 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="initial-scale=1">
 
-  <title>tl;dw | Anqur</title>
+  <title>Internal Blog Theory | Anqur</title>
   <link rel="stylesheet" href="/style/post.css">
   <link rel="stylesheet" href="/scripts/highlight.css">
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.css" integrity="sha384-MlJdn/WNKDGXveldHDdyRP1R4CTHr3FeuDNfhsLPYrq2t0UBkUdK2jyTnXPEK1NQ" crossorigin="anonymous">
+  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.js" integrity="sha384-VQ8d8WVFw0yHhCk5E8I86oOhv48xLpnDZx5T9GogA/Y84DcCKWXDmSDfn13bzFZY" crossorigin="anonymous"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/contrib/auto-render.min.js" integrity="sha384-+XBljXPPiv+OzfbB3cVmLHf4hdUFHlWNZN5spNQ7rmHTXpd7WvJum6fIACpNNfIR" crossorigin="anonymous"
+    onload="renderMathInElement(document.body);"></script>
 </head>
 
 <body>
   <header>
-    <h1><a href="/">tl;dw</a></h1>
+    <h1><a href="/">Internal Blog Theory</a></h1>
   </header>
 
   <main>
     <article>
-      <p>Blog of <a href="//github.com/anqurvanillapy">Anqur</a>.</p>
-<h2 id="contents">Contents</h2>
-<ol type="1">
-<li><a href="post/20200703-oktt-notes">Notes about Notes: OKTT</a> (WIP)</li>
-<li><a href="post/20200804-oo-cat-transcript">Transcript: ∞-Category Theory for Undergraduates</a> (WIP)</li>
-</ol>
-<details>
-<p><summary>Legacy Posts</summary></p>
+      <h1 id="cat-readme"><code>~$ cat README</code></h1>
+<p>Hi, I'm <a href="//github.com/anqurvanillapy">Anqur</a>, a daytime
+CRUD boy and midnight PL enthusiast.</p>
+<p>Topics covered here:</p>
 <ul>
-<li><a href="post/legacy/cpp11-task-queue">C++11 风格的迷你任务队列</a></li>
-<li><a href="post/legacy/c-infinite-loop">C 中的无限循环</a></li>
-<li><a href="post/legacy/initialization-outta-main">初探进程的动态初始化</a></li>
-<li><a href="post/legacy/fmt-vim-like-go-fmt">Vim 中的制表符缩进与空格对齐</a></li>
-<li><a href="post/legacy/tagged-pointer">标记指针</a></li>
-<li><a href="post/legacy/chan-chan">Chan Chan</a></li>
-<li><a href="post/legacy/maybe-and-calling-conventions"><code>maybe&lt;T&gt;</code> 与调用规范</a></li>
-<li><a href="post/legacy/cpp-than-java-and-future">C++ vs Java?</a></li>
-<li><a href="post/legacy/js-task-and-microtask">初探 JavaScript 中的 task 和 microtask</a></li>
-<li><a href="post/legacy/likely-and-unlikely-trick">likely 和 unlikely 技巧</a></li>
-<li><a href="post/legacy/monash">Monash: 以 monadic 的姿势写 Shell</a></li>
-<li><a href="post/legacy/purity-in-cpp17">在 C++17 中为用户函数提供 purity 检测</a></li>
-<li><a href="post/legacy/lies-about-programming-languages-in-mathematical-notations-1">数学符号下的编程谎言 (1) 数据编码</a></li>
-<li><a href="post/legacy/how-to-make-russell-paradox">如何创造罗素悖论</a></li>
+<li>Basic CRUD stuff hooray</li>
+<li>Programming language theory</li>
+<li>Category theory</li>
+<li>Sometimes Golang? Lol</li>
+<li>Trashy ideas</li>
+<li>..., etc</li>
 </ul>
-</details>
-<h2 id="notes">Notes</h2>
 <p>My <a href="post/cv">CV</a>.</p>
-<p>Report bugs, or you have better ideas: <a href="https://github.com/anqurvanillapy/anqurvanillapy.github.io/issues">Issues</a>.</p>
-<p>All posts follow the <code>cc-by-4.0</code> license.</p>
+<h2 id="category-theory">Category theory</h2>
+<ul>
+<li><a href="post/2022-02-11-base-change-functor/index.html">Base
+change, 如何导出 <span class="math inline">\(f^*\)</span></a></li>
+</ul>
 
     </article>
   </main>
 
   <footer>
-    Too long, didn't write.
+    <p>
+      Report bugs, or you have better ideas:
+      <a href="//github.com/anqurvanillapy/anqurvanillapy.github.io/issues">Issues</a>.
+    </p>
+    <p>All posts follow the <code>cc-by-4.0</code> license.</p>
   </footer>
-
-  <script
-    type="text/javascript"
-    async
-    src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
-  </script>
 </body>
 
 </html>
