--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ CRUD boy and midnight PL enthusiast.</p>
 <h2 id="category-theory">Category theory</h2>
 <ul>
 <li><a href="post/2022-02-11-base-change-functor/index.html">Base
-change, 如何导出 <span class="math inline">\(f^*\)</span></a></li>
+change, 如何推导 <span class="math inline">\(f^*\)</span></a></li>
 </ul>
 
     </article>
