--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
       <h1 id="cat-readme"><code>~$ cat README</code></h1>
 <p>Hi, I'm <a href="//github.com/anqurvanillapy">Anqur</a>, a daytime
 CRUD boy and midnight PL enthusiast.</p>
-<p>Topics covered here:</p>
+<p>博客包含的话题:</p>
 <ul>
-<li>Basic CRUD stuff hooray</li>
-<li>Programming language theory</li>
-<li>Category theory</li>
-<li>Sometimes Golang? Lol</li>
-<li>Trashy ideas</li>
-<li>..., etc</li>
+<li>基础的 CRUD 东东</li>
+<li>编程语言理论</li>
+<li>范畴论</li>
+<li>有时会讲些 Go 语言的玩意儿</li>
+<li>一些些脏脏 ideas</li>
 </ul>
-<p>My <a href="post/cv">CV</a>.</p>
-<h2 id="category-theory">Category theory</h2>
+<p>..., etc.</p>
+<p>我的 <a href="post/cv">简历</a>.</p>
+<h2 id="工作中的-ideas">💼 工作中的 ideas</h2>
 <ul>
-<li><a href="post/2022-02-11-base-change-functor/index.html">Base
-change, 如何推导 <span class="math inline">\(f^*\)</span></a></li>
+<li>2023-03-10 <a href="/post/20230310-unitlet/">将 Kubernetes API
+翻译成 systemd 操作</a></li>
 </ul>
 
     </article>
