--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <main>
     <article>
       <h1 id="cat-readme"><code>~$ cat README</code></h1>
-<p>Hi, I'm <a href="//github.com/anqurvanillapy">Anqur</a>, a daytime
-CRUD boy and midnight PL enthusiast.</p>
+<p>Hi, I'm <a href="https://github.com/anqurvanillapy">Anqur</a>, a
+daytime CRUD boy and midnight PL enthusiast.</p>
 <p>博客包含的话题:</p>
 <ul>
 <li>基础的 CRUD 东东</li>
@@ -38,8 +38,10 @@ CRUD boy and midnight PL enthusiast.</p>
 <p>我的 <a href="post/cv">简历</a>.</p>
 <h2 id="工作中的-ideas">💼 工作中的 ideas</h2>
 <ul>
-<li>2023-03-10 <a href="/post/20230310-unitlet/">将 Kubernetes API
-翻译成 systemd 操作</a></li>
+<li>2023-03-10 <a href="/post/20230310-unitlet">将 Kubernetes API 翻译成
+systemd 操作</a></li>
+<li>2023-03-13 <a href="/post/20230313-log4s3">S3 as an Append-only Log
+Store</a></li>
 </ul>
 
     </article>
