--- a/index.html
+++ b/index.html
@@ -23,19 +23,11 @@
 
   <main>
     <article>
-      <h1 id="cat-readme"><code>~$ cat README</code></h1>
-<p>Hi, I'm <a href="https://github.com/anqurvanillapy">Anqur</a>, a
-daytime CRUD boy and midnight PL enthusiast.</p>
-<p>博客包含的话题:</p>
-<ul>
-<li>基础的 CRUD 东东</li>
-<li>编程语言理论</li>
-<li>范畴论</li>
-<li>有时会讲些 Go 语言的玩意儿</li>
-<li>一些些脏脏 ideas</li>
-</ul>
-<p>..., etc.</p>
-<p>我的 <a href="post/cv">简历</a>.</p>
+      <h1 id="hi">Hi</h1>
+<p>这里是 <a href="https://github.com/anqurvanillapy">Anqur</a>,
+也可以叫我 <em>安可</em>, <em>俺去</em>, <em>aqq</em>. 我喜欢编程语言,
+日常与分布式系统打交道, 平常弹一些贝斯.</p>
+<p>我的 <a href="post/cv">工作简历</a>.</p>
 <h2 id="工作中的-ideas">💼 工作中的 ideas</h2>
 <ul>
 <li>2023-03-10 <a href="/post/20230310-unitlet">将 Kubernetes API 翻译成
