Initialize new post
Signed-off-by: anqurvanillapy <anqurvanillapy@gmail.com>

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <title>Internal Blog Theory | Anqur</title>
   <link rel="stylesheet" href="/style/post.css">
-  <link rel="stylesheet" href="/scripts/highlight.css">
+  <link rel="stylesheet" href="/style/highlight.css">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.css" integrity="sha384-MlJdn/WNKDGXveldHDdyRP1R4CTHr3FeuDNfhsLPYrq2t0UBkUdK2jyTnXPEK1NQ" crossorigin="anonymous">
   <script defer src="https://cdn.jsdelivr.net/npm/katex@0.15.2/dist/katex.min.js" integrity="sha384-VQ8d8WVFw0yHhCk5E8I86oOhv48xLpnDZx5T9GogA/Y84DcCKWXDmSDfn13bzFZY" crossorigin="anonymous"></script>
@@ -23,12 +23,17 @@
 
   <main>
     <article>
-      <h1 id="hi">Hi</h1>
+      <h1 id="hi-folks">Hi folks</h1>
 <p>这里是 <a href="https://github.com/anqurvanillapy">Anqur</a>,
-也可以叫我 <em>安可</em>, <em>俺去</em>, <em>aqq</em>. 我喜欢编程语言,
+也可以叫我 <em>安可</em>/<em>俺去</em>/<em>aqq</em>. 我喜欢编程语言,
 日常与分布式系统打交道, 平常弹一些贝斯.</p>
 <p>我的 <a href="post/cv">工作简历</a>.</p>
-<h2 id="工作中的-ideas">💼 工作中的 ideas</h2>
+<!--
+## 🧸 和编程语言有关的东东
+
+* 2024-01-07 [2024 New Year Resolutions](/post/20240107-2024newyear)
+-->
+<h2 id="一些工作中的想法">💼 一些工作中的想法</h2>
 <ul>
 <li>2023-03-10 <a href="/post/20230310-unitlet">将 Kubernetes API 翻译成
 systemd 操作</a></li>
