--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@ systemd 操作</a></li>
 <li>2023-03-13 <a href="/post/20230313-log4s3">S3 as an Append-only Log
 Store</a></li>
 </ul>
+<h2 id="个人总结及教程">📑 个人总结及教程</h2>
+<ul>
+<li>2024-06-23 <a href="/post/20240623-koka-algeff">速通 Koka
+代数副作用</a></li>
+</ul>
 
     </article>
 </main>
