--- a/index.html
+++ b/index.html
@@ -10,18 +10,13 @@
     <link rel="stylesheet" href="/style/post.css">
     <link rel="stylesheet" href="/style/highlight.css">
 
-    <link rel="stylesheet"
-          href="https://cdn.jsdelivr.net/npm/katex@0.16.10/dist/katex.min.css"
-          integrity="sha384-wcIxkf4k558AjM3Yz3BBFQUbk/zgIYC2R0QpeeYb+TwlBVMrlgLqwRjRtGZiK7ww"
-          crossorigin="anonymous">
-    <script defer
-            src="https://cdn.jsdelivr.net/npm/katex@0.16.10/dist/katex.min.js"
-            integrity="sha384-hIoBPJpTUs74ddyc4bFZSM1TVlQDA60VBbJS0oA934VSz82sBx1X7kSx2ATBDIyd"
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.18/dist/katex.min.css"
+          integrity="sha384-veTAhWILPOotXm+kbR5uY7dRamYLJf58I7P+hJhjeuc7hsMAkJHTsPahAl0hBST0" crossorigin="anonymous">
+    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.18/dist/katex.min.js"
+            integrity="sha384-v6mkHYHfY/4BWq54f7lQAdtIsoZZIByznQ3ZqN38OL4KCsrxo31SLlPiak7cj/Mg"
             crossorigin="anonymous"></script>
-    <script defer
-            src="https://cdn.jsdelivr.net/npm/katex@0.16.10/dist/contrib/auto-render.min.js"
-            integrity="sha384-43gviWU0YVjaDtb/GhzOouOXtZMP/7XUzwPTstBeZFe/+rCMvRwr4yROQP43s0Xk"
-            crossorigin="anonymous"
+    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.18/dist/contrib/auto-render.min.js"
+            integrity="sha384-hCXGrW6PitJEwbkoStFjeJxv+fSOOQKOPbJxSfM6G5sWZjAyWhXiTIIAmQqnlLlh" crossorigin="anonymous"
             onload="renderMathInElement(document.body);"></script>
 </head>
 
@@ -33,26 +28,27 @@
 <main>
     <article>
         <h1 id="hi-folks">Hi folks</h1>
-<p>这里是 <a href="https://github.com/anqurvanillapy">Anqur</a>,
-也可以叫我 <em>安可</em>/<em>俺去</em>/<em>aqq</em>. 我喜欢编程语言,
-日常与分布式系统打交道, 平常弹一些贝斯.</p>
-<p>我的 <a href="post/cv">工作简历</a>.</p>
-<h2 id="工作中的想法">💼 工作中的想法</h2>
 <ul>
-<li>2023-03-10 <a href="/post/20230310-unitlet">将 Kubernetes API 翻译成
-systemd 操作</a></li>
-<li>2023-03-13 <a href="/post/20230313-log4s3">S3 as an Append-only Log
-Store</a></li>
+<li>I'm <a href="https://github.com/anqurvanillapy">Anqur</a>, you could
+call me <em>安可</em>, <em>俺去</em>, <em>aqq</em> too.</li>
+<li>I make programming languages.</li>
+<li>I used to work on distributed systems, embedded systems, and
+web.</li>
+<li>I love music. I play the electric guitar and the electric bass
+guitar in many bands.</li>
 </ul>
-<h2 id="总结和教程">📓 总结和教程</h2>
+<p>My <a href="post/cv">CV (Chinese)</a>.</p>
+<h2 id="posts">Posts</h2>
+<p>I write about 💡Ideas, 🏃Cheatsheet, and 🗑️Notes.</p>
 <ul>
-<li>2024-06-23 <a href="/post/20240623-koka-algeff">速通 Koka
+<li>2025-03-04 🗑️ <a href="/post/20250304-fp-control-flow">Control flow
+in functional programming</a></li>
+<li>2024-06-23 🏃 <a href="/post/20240623-koka-algeff">速通 Koka
 代数副作用</a></li>
-</ul>
-<h2 id="学术研究">🎓 学术研究</h2>
-<ul>
-<li>2024-12-21 <a href="/post/20241221-general-jit-howto">JIT
-学习笔记</a></li>
+<li>2023-03-13 💡 <a href="/post/20230313-log4s3">S3 as an Append-only
+Log Store</a></li>
+<li>2023-03-10 💡 <a href="/post/20230310-unitlet">将 Kubernetes API
+翻译成 systemd 操作</a></li>
 </ul>
 
     </article>
@@ -60,10 +56,8 @@ Store</a></li>
 
 <footer>
     <p>
-        Report bugs, or you have better ideas:
-        <a href="//github.com/anqur/anqur.github.io/issues">Issues</a>.
+        All posts follow the <code>cc-by-4.0</code> license. See <a href="//github.com/anqur/anqur.github.io/issues">issues</a>?
     </p>
-    <p>All posts follow the <code>cc-by-4.0</code> license.</p>
 </footer>
 </body>
 
