--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@ guitar in many bands.</li>
 </ul>
 <p>My <a href="post/cv">CV (Chinese)</a>.</p>
 <h2 id="posts">Posts</h2>
-<p>I write about 💡Ideas, 🏃Cheatsheet, and 🗑️Notes.</p>
+<p>I write about 💡Ideas, 🏃Cheatsheet, and 🚮Notes.</p>
 <ul>
-<li>2025-03-04 🗑️ <a href="/post/20250304-fp-control-flow">Control flow
-in functional programming</a></li>
+<li>2025-03-04 🚮 <a href="/post/20250304-fp-control-flow">Control Flow
+in Functional Programming</a></li>
 <li>2024-06-23 🏃 <a href="/post/20240623-koka-algeff">速通 Koka
 代数副作用</a></li>
 <li>2023-03-13 💡 <a href="/post/20230313-log4s3">S3 as an Append-only
