--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ guitar in many bands.</li>
 <h2 id="posts">Posts</h2>
 <p>I write about 💡Ideas, 🏃Cheatsheet, and 🚮Notes.</p>
 <ul>
-<li>2025-03-04 🚮 <a href="/post/20250304-fp-control-flow">Control Flow
+<li>2025-03-04 🚮 <a href="/post/20250304-fp-early-return">Early Return
 in Functional Programming</a></li>
 <li>2024-06-23 🏃 <a href="/post/20240623-koka-algeff">速通 Koka
 代数副作用</a></li>
