--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ guitar in many bands.</li>
 </ul>
 <p>My <a href="post/cv">CV (Chinese)</a>.</p>
 <h2 id="posts">Posts</h2>
-<p>I write about 💡Ideas, 🏃Cheatsheet, and 🚮Notes.</p>
+<p>I write about 💡Ideas, 🏃Cheatsheets, and 🚮Notes.</p>
 <ul>
 <li>2025-03-04 🚮 <a href="/post/20250304-fp-early-return">Early Return
 in Functional Programming</a></li>
