--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -41,6 +41,8 @@ guitar in many bands.</li>
 <h2 id="posts">Posts</h2>
 <p>I write about 💡Ideas, 🏃Cheatsheets, and 🚮Notes.</p>
 <ul>
+<li>2025-03-05 🚮 <a href="/post/20250305-c-as-an-ir">C as an
+IR</a></li>
 <li>2025-03-04 🚮 <a href="/post/20250304-fp-early-return">Early Return
 in Functional Programming</a></li>
 <li>2024-06-23 🏃 <a href="/post/20240623-koka-algeff">速通 Koka
