--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@ guitar in many bands.</li>
 <h2 id="posts">Posts</h2>
 <p>I write about 💡Ideas, 🏃Cheatsheets, and 🚮Notes.</p>
 <ul>
+<li>2025-03-15 💡 <a href="/post/20250315-monad-is-trash">Monad is
+trash</a></li>
 <li>2025-03-05 🚮 <a href="/post/20250305-c-as-an-ir">C as an
 IR</a></li>
 <li>2025-03-04 🚮 <a href="/post/20250304-fp-early-return">Early Return
